--- a/package.json
+++ b/package.json
@@ -14,7 +14,17 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@chakra-ui/gatsby-plugin": "^2.0.4",
+    "@chakra-ui/react": "^1.8.7",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "framer-motion": "^6.2.8",
     "gatsby": "^4.10.3",
+    "gatsby-plugin-image": "^2.10.1",
+    "gatsby-plugin-sharp": "^4.10.2",
+    "gatsby-source-filesystem": "^4.10.1",
+    "gatsby-transformer-sharp": "^4.10.0",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
